--- a/index.html
+++ b/index.html
@@ -19,18 +19,25 @@
 <body class="main-background">
     <main class="frontpage" alt="frontpage-content-of-perfume-and-price">
         <div class="productimage">
-            <img class="perfume-image" src="image-product-desktop.jpg" alt="image-product">
-            <img class="perfume-mobile sr-only" src="image-product-mobile.jpg" alt="image-product-mobile">
+            <!--<img class="perfume-image" src="image-product-desktop.jpg"
+                alt="desktop image of Chanel perfume displayed on table">
+            <img class="perfume-mobile sr-only" src="image-product-mobile.jpg"
+                alt="mobile image of Chanel perfume displayed on table">-->
+            <picture>
+                <source srcset="image-product-desktop.jpg" />
+                <img class="mobileimage sr-only" src="image-product-mobile.jpg"
+                    alt="Chanel perfume bottle displayed on table" />
+            </picture>
 
             <div class="advert">
-                <p>P E R F U M E</p>
+                <p class="advert-title">perfume</p>
                 <h1>Gabrielle Essence Eau De Parfum</h1>
                 <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the
                     House
                     of CHANEL.</p>
                 <span class="pricelist">
                     <p class="price">$149.99</p>
-                    <p class="original"><s>$169.99</s></p>
+                    <span sr-only="the previous price was 169.99"><del class="original">$169.99</del></span>
                 </span>
                 <button class="button"><svg width="15" height="16" xmlns="http://www.w3.org/2000/svg">
                         <path
