--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body class="main-background">
-    <main class="frontpage" alt="frontpage-content-of-perfume-and-price">
+    <main class="frontpage">
         <div class="productimage">
             <!--<img class="perfume-image" src="image-product-desktop.jpg"
                 alt="desktop image of Chanel perfume displayed on table">
